Bug 1826374 - Avoid a deadlock in SMimeVerificationTask. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D174651

--HG--
extra : rebase_source : d211fc68cc05bc876342bcd902f81ed7be912517